Add additional topics

--- a/slides/index.html
+++ b/slides/index.html
@@ -135,7 +135,10 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 
         <section data-markdown data-background="#27ae60">
           <script type="text/template">
-            ## Now, imagine what do we want ...
+            ## We want a feedback bassed process
+
+            ### Automated
+            ### Frequent
           </script>
         </section>
 
@@ -235,6 +238,59 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
           </script>
         </section>
 
+        <section data-markdown>
+          <script type="text/template">
+            ## Commit stage
+          </script>
+        </section>
+
+        <section data-markdown>
+          <script type="text/template">
+            ## Continuous integration
+          </script>
+        </section>
+
+        <section data-markdown>
+          <script type="text/template">
+            ## Acceptance stage
+          </script>
+        </section>
+
+        <section data-markdown data-background="#e67e22">
+          <script type="text/template">
+            ## Smoke testing
+          </script>
+        </section>
+
+        <section data-markdown>
+          <script type="text/template">
+            ## Managing Infrastructure and environment
+          </script>
+        </section>
+
+        <section data-markdown>
+          <script type="text/template">
+            ## UAT
+          </script>
+        </section>
+
+        <section data-markdown>
+          <script type="text/template">
+            ## Capacity
+          </script>
+        </section>
+
+        <section data-markdown>
+          <script type="text/template">
+            ## Production
+          </script>
+        </section>
+
+        <section data-markdown data-background="#e67e22">
+          <script type="text/template">
+            ## Immutable Servers
+          </script>
+        </section>
       </div>
     </div>
 
